2002-07-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Bugfix of Gdk::Window#property_change(), 
	Gdk::Window#colormap(Reported by WATANABE Hirofumi).

2002-06-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpixmap.c: Change RBGTK_INITIALIZE to RBGOBJ_INITIALIZE.
	* src/*.[ch]: Change make_gdkgc() to GOBJ2RVAL(), get_gdkgc() to RVAL2GOBJ().

2002-06-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c, src/rbgtk.h: Change rbgtk_class_info to RGObjClassInfo.
	Remove gtk_type_hash
	* src/rbgtk.h: Remove unused extern definition(warn/mesg/print_handler)
	* src/*.[ch]: Change make_gstyle(), make_gtkaccelgrp(), 
	make_gdkwindow(),make_gdkpixmap(), make_gdkbitmap(), new_gdkwindow(), 
	new_gdkpixmap(), new_gdkbitmap()to GOBJ2RVAL, 
	get_gstyle(), get_gtkaccelgrp(), get_gdkwindow(), get_gdkpixmap(), 
	get_gdkbitmap()  to RVAL2GOBJ().
	* src/rbgtkaccelgroup.c, src/rbgtkstyle.c: 
	Correspond to RGObjClassInfo.
	
2002-06-23  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgtk.c, src/rbgtk.h: Remove gobj_mark(),rbgtk_lookup_class(),
	rbgtk_lookup_class_by_gtype(), get_gtk_type().
	* src/rbgtkobject.c: Remove force_get_gobject(),null(),
	clear_gobject(),id_gtkdata, id_relatives, id_relative_callbacks, 
	id_class_info.
   	* src/rbgtk.c: Rename set_gobject() to rbgtk_initialize_gtkobject().
	and modified(by Masahiro Sakai <s01397ms@sfc.keio.ac.jp>).
   	* src/rbgtk.h: Add RBGTK_INITIALIZE().
   	* src/*.[ch]: Change set_widget(), set_gobject() to RBGTK_INITIALIZE().
	Change get_gobject(), get_widget() to RVAL2GOBJ().
	Change get_value_from_gobject() to GOBJ2RVAL().
	* ChangeLog: Change Date format.

2002-06-22  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgdkwindowgroup.c: File Added. Support Gtk::WindowGroup
	* src/rbgtk.c, src/global.h: Support Gtk::WindowGroup

2002-06-22  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Add Gdk::Window#copy_area, #register_dnd,
  	#override_redirect, #shape_combine_mask, #set_child_shapes,